fix: Сделал реал-тайм обновления кружочков
